Added edition and deletion of a tournament
